; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_xcb_apps.c_AddDesktop.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_xcb_apps.c_AddDesktop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"screen://\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"Desktop\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @AddDesktop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AddDesktop(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call i32 @_(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32* @input_item_NewCard(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %15

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @services_discovery_AddItem(i32* %10, i32* %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @input_item_Release(i32* %13)
  br label %15

15:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32* @input_item_NewCard(i8*, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @services_discovery_AddItem(i32*, i32*) #1

declare dso_local i32 @input_item_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
